--- a/DS1302/RTC/Objects/ProjectTemplate.build_log.htm
+++ b/DS1302/RTC/Objects/ProjectTemplate.build_log.htm
@@ -21,7 +21,7 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.18.0
 Dialog DLL:      TCM.DLL V1.27.0.0
  
 <h2>Project:</h2>
-C:\Users\Administrator\Desktop\RTC\ProjectTemplate.uvprojx
+E:\GithubHouse\DS1302\DS1302\DS1302\RTC\ProjectTemplate.uvprojx
 Project File Date:  08/16/2017
 
 <h2>Output:</h2>
@@ -65,7 +65,7 @@ FromELF: creating hex file...
   D:\Keil_v5\ARM\PACK\Keil\STM32F4xx_DFP\2.7.0\Drivers\CMSIS\Device\ST\STM32F4xx\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:14
+Build Time Elapsed:  00:00:12
 </pre>
 </body>
 </html>
